--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,13 @@ img {
 }
 
 .topbar {
-	padding: 30px;
+	padding: 0 20px;
+	line-height: 80px;
 	box-sizing: border-box;
 }
 
 .container {
-	max-width: 1000px;
-	padding: 30px;
+	max-width: 1400px;
 	box-sizing: border-box;
 }
 
@@ -69,9 +69,12 @@ img {
 	color: white;
 }
 
-.header-back {
-	padding: 0 0 80px 0;
-	width: 100%;
+#header-back {
+	position:fixed;
+	left: 0;
+	top: 0;
+	right:0;
+	bottom: 5%;
     background-image: url(../assets/background_img.JPG);
     background-size: cover;
     background-position: 50% 0;
@@ -118,9 +121,6 @@ img {
 }
 
 
-
-
-
 @media (max-width: 625px) {
 	#menu-trigger .material-icons {
 		display: block;
@@ -159,6 +159,5 @@ img {
 
 @media (max-width: 991px) {
 	.container {
-		max-width: 600px;
 	}
 }
