--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/*.body {
+	height: 100%;
+}
+*/
 h1, h2, h3, h4 {
 	margin: 0;
 	letter-spacing: 2px;
@@ -13,6 +17,13 @@ img {
 	width: 100%
 	height: auto;
 }
+
+.clearfix.group:after{
+    content: “”;
+    display: table;
+    clear: both;
+}
+    
 
 .topbar {
 	padding: 0 20px;
@@ -62,6 +73,7 @@ img {
 	position: relative;
 	color: #D3D7DC;
 	left: 50%;
+	bottom: -15px;
 	transform: translate(-50%, 0);
 	font-size: 4em;
 }
@@ -71,11 +83,8 @@ img {
 }
 
 #header-back {
-	position:fixed;
-	left: 0;
-	top: 0;
-	right:0;
-	bottom: 5%;
+	max-width: 100%;
+	height: 700px; 
     background-image: url(../assets/background_img.JPG);
     background-size: cover;
     background-position: 50% 0;
@@ -93,6 +102,11 @@ img {
     text-align: center;
     border: 7px solid #D3D7DC;
     border-radius: 50%;
+}
+
+
+.menu-trigger {
+	height: 80px;
 }
 
 .simply-introduce{
@@ -122,9 +136,20 @@ img {
 }
 
 
-@media (max-width: 625px) {
+/* about */
+.about {
+	width: 100%;
+	height: 200px;
+	background-color: #ccc;
+}
+
+
+
+
+@media (max-width: 650px) {
+
 	#menu-trigger .material-icons {
-		display: block;
+		display: inline;
 		margin-right: 30px; 
 		font-size: 2em;
 		color: #D3D7DC;
@@ -155,10 +180,5 @@ img {
 		display: block;
 		line-height: 2;
 		font-size: 2em;
-	}
-}
-
-@media (max-width: 991px) {
-	.container {
 	}
 }
