--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-/*.body {
-	height: 100%;
+div {
+	box-sizing: border-box;
 }
-*/
+
 h1, h2, h3, h4 {
 	margin: 0;
 	letter-spacing: 2px;
@@ -18,17 +18,25 @@ img {
 	height: auto;
 }
 
+hr {
+	width: 80%;
+	margin: 30px auto; 
+}
+
 .clearfix.group:after{
     content: “”;
     display: table;
     clear: both;
+}
+
+.heading-title {
+	margin-bottom: 50px;
 }
     
 
 .topbar {
 	padding: 0 20px;
 	line-height: 80px;
-	box-sizing: border-box;
 }
 
 .container {
@@ -59,6 +67,10 @@ img {
 #nav a:hover{
 	color: white;
 	text-decoration: none;
+}
+
+#mobile-nav {
+	display: none;
 }
 
 #menu-trigger .material-icons {
@@ -95,14 +107,6 @@ img {
 	text-align: center;
 }
 
-.header img{
-    margin: 100px 0 0 0;
-    width: 250px;
-    height: 250px;
-    text-align: center;
-    border: 7px solid #D3D7DC;
-    border-radius: 50%;
-}
 
 
 .menu-trigger {
@@ -139,14 +143,102 @@ img {
 /* about */
 .about {
 	width: 100%;
-	height: 200px;
-	background-color: #ccc;
+	height: auto;
+	background-color: white;
+}
+
+.about-title h2 {
+	margin: 20px 0 10px 0px;
+    color: #282928;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.about-title hr {
+	margin: 10px auto;
+    width: 50px;
+}
+
+.about .row {
+	margin: 50px auto;
+}
+
+.about h3{
+	color: #282928;
+}
+
+.article-first-word {
+	font-size: 30px;
+}
+
+.about h5{
+	text-align: right;
+	margin-bottom: 20px;
+}
+.about h5:before{
+	content: "－";
+	color: #D3D7DC;
+}
+
+.my-photo {
+	width: 100%;
+	height: auto;
+}
+
+.about-link {
+	width: 100%;
+	height: auto;
 }
 
 
+.experience .icons {
+	text-align: center;
+}
 
+.experience hr {
+	width: 40%;
+	margin: 10px auto;
+}
+
+.experience .material-icons{
+	text-align: center;
+}
+
+.experience h4{
+	color: #D3D7DC;
+	text-transform: capitalize;
+}
+
+.experience ul {
+	margin: 0 10%;
+}
+
+.row .col-sm-2 {
+	text-align: center;	
+	margin-top: 10px;
+}
+.interest  h3{
+	color: #D3D7DC;
+	text-transform: capitalize;
+}
+
+@media (min-width: 651px){
+
+	.header img{
+	    margin: 100px 0 0 0;
+	    width: 250px;
+	    height: 250px;
+	    text-align: center;
+	    border: 7px solid #D3D7DC;
+	    border-radius: 50%;
+	}
+}
 
 @media (max-width: 650px) {
+
+	#menu-trigger {
+		z-index: 10;
+	}
 
 	#menu-trigger .material-icons {
 		display: inline;
@@ -159,9 +251,14 @@ img {
 		color: white;
 	}
 
-	#nav { /*do the mobile nav page*/
+	#nav {
+		display: none;
+	}
+
+	#mobile-nav { /*do the mobile nav page*/
 		display: none;
 		position: fixed;
+		z-index: 10;
 		top: 0;
 		left: 0;
 		width: 100%;
@@ -169,16 +266,35 @@ img {
 		background-color: #282928;
 	}
 
-	#nav ul {
+	#mobile-nav ul {
 		position: relative;	/* must be used cuz top*/
 		text-align: center;
 		top: 50%;
 		transform: translate(0, -50%);  /* translate(left,right||top,down) to move*/
 	}
 
-	#nav li {
+	#mobile-nav li {
 		display: block;
 		line-height: 2;
 		font-size: 2em;
+	}
+
+	#mobile-nav a {
+		text-transform: uppercase;
+		color: #D3D7DC;
+	}
+
+	#mobile-nav a:hover{
+		color: white;
+		text-decoration: none;
+	}
+
+	.header img{
+	    margin: 10px 0 0 0;
+	    width: 250px;
+	    height: 250px;
+	    text-align: center;
+	    border: 7px solid #D3D7DC;
+	    border-radius: 50%;
 	}
 }
