--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ hr {
 	font-size: 4em;
 }
 
+
 #goto-second-page .material-icons:hover{
 	color: white;
 }
@@ -108,14 +109,12 @@ hr {
 	text-align: center;
 }
 
-
-
 .menu-trigger {
 	height: 80px;
 }
 
 .simply-introduce{
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 .simply-introduce h1, h3 {
@@ -226,12 +225,39 @@ hr {
 @media (min-width: 651px){
 
 	.header img{
-	    margin: 100px 0 0 0;
+	    margin: 40px 0 20px 0;
 	    width: 250px;
 	    height: 250px;
 	    text-align: center;
 	    border: 7px solid #D3D7DC;
 	    border-radius: 50%;
+	    transition: all 0.6s;
+	}
+
+	.header img:hover{
+		transform: scale(1.05);
+	}
+
+	.about-link {
+		display: none;
+	}
+
+	.about-link ul {
+		list-style-type: none;
+	}
+
+	.about-link li {
+		display: inline;
+		padding: 0 5px;
+	}
+
+	.about-link a {
+		color: #D3D7DC;
+	}
+
+	.about-link a:hover {
+		color: white;
+		text-decoration: none;
 	}
 }
 
@@ -297,5 +323,27 @@ hr {
 	    text-align: center;
 	    border: 7px solid #D3D7DC;
 	    border-radius: 50%;
+	}
+
+	.about-link {
+		margin-top: 20px;
+	}
+
+	.about-link ul {
+		list-style-type: none;
+	}
+
+	.about-link li {
+		display: inline;
+		padding: 0 5px;
+	}
+
+	.about-link a {
+		color: #D3D7DC;
+	}
+
+	.about-link a:hover {
+		color: white;
+		text-decoration: none;
 	}
 }
