--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,18 @@ hr {
 }
 
 
+#cat-img {
+	width: 100%;
+	height: 400px;
+	margin: 100px 0;
+	background: url(../assets/cat.JPG);
+	background-size: cover;
+	background-position: 50%;
+	background-repeat: no-repeat;
+	background-attachment: fixed; 
+
+}
+
 /*abilities*/
 
 .abilities .col-sm-6{
